# allscreenshots-cli

./: Cargo.toml  README.md
src/: error.rs  main.rs  utils.rs
src/commands/: async_capture.rs  batch.rs  capture.rs  completions.rs  compose.rs  config.rs  gallery.rs  jobs.rs  mod.rs  schedule.rs  usage.rs  watch.rs
src/config/: mod.rs  settings.rs
src/display/: graphs.rs  image.rs  mod.rs  progress.rs
