[package]
name = "allscreenshots-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Allscreenshots <support@allscreenshots.com>"]
description = "Command-line tool for capturing website screenshots with AllScreenshots"
license = "Apache-2.0"
repository = "https://github.com/allscreenshots/allscreenshots-sdk-rust"
keywords = ["screenshot", "cli", "web", "capture"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "allscreenshots"
path = "src/main.rs"

[dependencies]
# SDK dependency (use path for local dev, version for release)
allscreenshots-sdk = "0.1"
# For local development, uncomment below and comment above:
# allscreenshots-sdk = { path = "../allscreenshots-sdk-rust/sdk" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color", "suggestions", "wrap_help"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal UI
indicatif = { version = "0.17", features = ["improved_unicode"] }
console = "0.15"
viuer = { version = "0.9", features = ["print-file"] }
image = "0.25"
colored = "2"
dialoguer = "0.11"

# Config management
directories = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1.0"

# URL handling
url = "2.5"

# Clipboard support
arboard = "3"

# Human-readable output
humantime = "2.1"
bytesize = "1.3"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
tempfile = "3"

[features]
default = []
sixel = ["viuer/sixel"]
